<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity"
    android:background="@drawable/asphalt_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_str"
        android:textStyle="bold"
        android:textSize="80sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/optionsText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/optionsText"
        android:id="@+id/lanesLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanes_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/lanesText"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:id="@+id/numOfLanesSpinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lanesLayout"
        android:id="@+id/vibLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrations_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/vibText"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/vibSwitch"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/vibLayout"
        android:id="@+id/tiltLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tilt_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/tiltText"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/tiltSwitch"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/start_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/big_button_shape"
            android:id="@+id/startButton"/>

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/big_button_shape"
            android:layout_marginLeft="20dp"
            android:id="@+id/cancelButton"/>
    </LinearLayout>
</RelativeLayout>