<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:background="@drawable/asphalt_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/busted_str"
        android:textStyle="bold"
        android:textSize="100sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/bustedStr"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_str"
        android:textStyle="bold"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_below="@id/bustedStr"
        android:id="@+id/gameOverStr"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOverStr"
        android:layout_centerHorizontal="true"
        android:id="@+id/scoreLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_str"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:id="@+id/scoreStr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:id="@+id/gameScore"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/scoreLayout"
        android:gravity="center"
        android:id="@+id/enterNameLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your name: "
            android:textSize="20dp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:id="@+id/nameEditText"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterNameLayout"
        android:layout_above="@id/buttonsLayout"
        android:src="@drawable/policeman_png2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:id="@+id/buttonsLayout">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/playagain_str"
            android:background="@drawable/big_button_shape"
            android:id="@+id/playAgainBtn"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_str"
            android:background="@drawable/big_button_shape"
            android:layout_marginLeft="20dp"
            android:id="@+id/menuBtn"/>
    </LinearLayout>
</RelativeLayout>